--- a/video-processing-service/package.json
+++ b/video-processing-service/package.json
@@ -12,10 +12,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "fluent-ffmpeg": "^2.1.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/fluent-ffmpeg": "^2.1.21",
     "@types/node": "^20.6.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
