--- a/video-processing-service/package.json
+++ b/video-processing-service/package.json
@@ -15,6 +15,7 @@
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@google-cloud/storage": "^7.1.0",
     "express": "^4.18.2",
+    "firebase-admin": "^11.11.0",
     "fluent-ffmpeg": "^2.1.2"
   },
   "devDependencies": {
